# Ansyas

./: .gitignore  AGENTS.md  LICENSE  README.md  ansyas_mas_loader.py  mas_autocomplete.py  pyproject.toml  requirements.txt  run_100_percent_auto.py
api/: main.py  requirements.txt
examples/: concentric_flyback_rectangular_column.json  concentric_transformer.json  concentric_transformer_contiguous_rectangular_wire.json  example.mas.json  example.py  example_basic.json  example_basic_2_winding_transformer.json  example_basic_3_winding_transformer.json  example_basic_litz.json  example_basic_litz_round_column.json  example_basic_rectangular_wire.json  example_basic_round_column.json  example_basic_round_column_rectangular_wire.json  example_basic_stacked.json  example_cmc.json  example_filter.json  example_filter_rectangular_wire.json  example_toroidal_transformer_rectangular_wire.json  hdi_secondary_single.py  patent_coil_layer3.py
external_data/: core_materials.ndjson
src/: MAS_models.py  ansyas.py  ansyas_utils.py  coil.py  core.py  excitation.py  outputs.py
src/Ansyas/: MAS_models.py  __init__.py  ansyas.py  ansyas_mas_loader.py  ansyas_utils.py  bobbin.py  coil.py  cooling.py  core.py  excitation.py  mas_autocomplete.py  outputs.py
src/Ansyas/backends/: __init__.py  base.py
src/Ansyas/backends/ansys/: __init__.py  excitation.py  geometry.py  material.py  meshing.py  solver.py
src/Ansyas/backends/elmer/: __init__.py  excitation.py  geometry.py  mas_processor.py  material.py  meshing.py  postprocess.py  solver.py
src/Ansyas/backends/elmer/sif_templates/: eddy_current.yaml  thermal.yaml
tests/: conftest.py  context.py  run_all_mas_examples.py  run_full_comparison.py  runner.py  test_all_examples.py  test_all_mas_examples.py  test_ansyas_init.py  test_ansyas_utils.py  test_backends_base.py  test_cooling.py  test_integration_ansys.py  test_mas_loader.py  test_package_structure.py  validate_elmer_inductance.py
tests/mas_files/: cmc.json  simple_inductor_loss_factor.json  simple_inductor_rectangular_column.json  simple_inductor_rectangular_column_stacked.json  simple_inductor_rectangular_column_toroidal.json  simple_inductor_round_column.json  simple_inductor_steinmetz.json  simple_transformer.json
