[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Ansyas"
version = "0.9.17"
description = 'Ansyas automates the 3D FEM simulation in Ansys Maxwell/Icepak or Elmer FEM of any magnetic component described in MAS language.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["fem", "simulation", "magnetics", "elmer", "ansys", "maxwell"]
authors = [
  { name="Alfonso Martinez", email="Alfonso.Martinez@we-online.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cadquery",
  "OpenMagneticsVirtualBuilder",
  "numpy",
  "PyMKF",
]

[project.optional-dependencies]
# Ansys backend (commercial license required)
ansys = [
  "pyaedt>=0.9.0",
]
# Elmer backend (open-source, no license required)
elmer = [
  "pyelmer>=1.2.0",
  "gmsh>=4.11.0",
  "meshio>=5.0.0",
  "pyvista>=0.40.0",
]
# All backends
all = [
  "pyaedt>=0.9.0",
  "pyelmer>=1.2.0",
  "gmsh>=4.11.0",
  "meshio>=5.0.0",
  "pyvista>=0.40.0",
]
# Development dependencies
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "output/",
  "tests/output/",
  "*.aedt",
  "*.lock",
  "nul",
  ".coverage",
]

[tool.hatch.build.targets.wheel]
packages = ["src/Ansyas"]
artifacts = []
exclude = [
  "src/Ansyas/output/**/*",
  "src/Ansyas/outputs/**/*",
  "**/*.aedt",
  "**/*.lock",
  "**/__pycache__/**/*",
  "**/nul",
]

[project.urls]
Homepage = "https://we-online.com"
Repository = "https://github.com/WurthElektronik/Ansyas"
Contact = "https://www.linkedin.com/in/alfonso-martinez-de-la-torre/"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require external resources)",
    "ansys: marks tests that require Ansys AEDT license",
    "elmer: marks tests that require Elmer FEM installation",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning:defusedxml.*:",
    "ignore::DeprecationWarning:ansys.aedt.core.emit_core.*:",
    "ignore::DeprecationWarning:cadquery.*:",
    "ignore::DeprecationWarning:ezdxf.*:",
    "ignore::DeprecationWarning:pyelmer.*:",
]
